<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="216dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/decimalInput1"
            android:layout_width="100dp"
            android:layout_height="47dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:padding="8dp"
            android:selectAllOnFocus="true" />

        <ImageView
            android:id="@+id/operatorImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxWidth="26dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            app:srcCompat="@drawable/ic_add" />

        <EditText
            android:id="@+id/decimalInput2"
            android:layout_width="100dp"
            android:layout_height="47dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:padding="8dp"
            android:selectAllOnFocus="true" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/equalsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="145dp"
        app:layout_constraintBottom_toTopOf="@+id/historyView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:srcCompat="@drawable/ic_equals" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/historyView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>